frame/support/test/tests/pallet_ui/storage_multiple_renames.stderr
error: Invalid attribute: Duplicate attribute
  --> $DIR/storage_multiple_renames.rs:20:3
   |
20 |     #[pallet::storage_prefix = "Baz"]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
